# Minimal-Docker-Example-Marcello-Wienhoven

./: LICENSE  Makefile  README.md  README_old.md  main.py  pyproject.toml
data/processed/: posts.parquet
data/raw/tanach/: 1_Kings.txt  1_Samuel.txt  2_Kings.txt  2_Samuel.txt  Amos.txt  Deuteronomy.txt  Exodus.txt  Ezekiel.txt  Genesis.txt  Habakkuk.txt  Haggai.txt  Hosea.txt  Isaiah.txt  Jeremiah.txt  Joel.txt  Jonah.txt  Joshua.txt  Judges.txt  Leviticus.txt  Malachi.txt  Micah.txt  Nahum.txt  Numbers.txt  Obadiah.txt  Zechariah.txt  Zephaniah.txt
ingest/: ingest.Dockerfile  ingest.py
model/: requirements.txt  serve.Dockerfile  serve.py
preprocess/: preprocess.Dockerfile  preprocess.py
